# porter

./: Feature-ideas.md  README.md  install.sh  porter.sh  pyproject.toml
porter/: __main__.py  app.py  porter.tcss
porter/fs/: archive.py  base.py  local.py  sftp.py  ssh_config.py
porter/models/: entry.py
porter/widgets/: confirm_dialog.py  connect_dialog.py  context_menu.py  file_table.py  fkey_bar.py  help_screen.py  jump_bar.py  pane.py  viewer.py
